--- a/frontend/src/css/MyForm.css
+++ b/frontend/src/css/MyForm.css
@@ -1,28 +1,42 @@
+@font-face {
+    font-family: 'KCC-Ganpan';
+    /* src: url('../img/swot_img/KCC-Ganpan.woff') format('woff'); */
+}
+.form-h {
+    font-family: 'KCC-Ganpan', sans-serif;
+    font-size: 25px;
+}
+/* 카테고리 글자 */
 .form-h1 {
+    font-family: 'KCC-Ganpan', sans-serif;
     font-size: 18px;
     font-weight: bold;
-    padding-left: 20px;
     padding-right: 20px;
     margin-top:10px;
+    width: 100%;
     margin-bottom:10px;
 }
+/* ~만원 이하 */
 .e-txt {
     display: inline-block;
     font-size: 14px;
     position: absolute;
-    right: 5px;
+    right: 10px;
     bottom: 0px;
+    margin-bottom: 3px;
 }
 .pos-rel {
     position: relative;
 }
+/* 업종 카테고리 관련 */
 .form-r-w {
+    font-family: 'KCC-Ganpan', sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     /* justify-content: ; */
     gap: 5px;
-    width: 75%;
+    width: 90%;
     margin: auto;
 }
 
@@ -39,19 +53,25 @@
     width: 95%;
     margin: auto;
 }
-
+/* 지역 카테고리 관련 */
 .form-div {
     width: 95%;
     margin: auto;
     display: flex;
+    font-family: 'KCC-Ganpan', sans-serif;
 }
+/* 지역 밑에 누르는거 */
 #reg-txt {
+    border-radius: 10px; /* 둥근 테두리를 위한 설정 */
+    overflow: hidden;    /* 둥근 테두리로 인해 넘치는 부분을 숨김 */
+    margin-top: 5px;     /* 상단 마진 조절 */
+    margin-bottom: 5px;  /* 하단 마진 조절 */
     &:hover {
         cursor: pointer;
     }
     width: 100%;
-    min-height: 50px;
-    box-shadow: 0px 0px 1px 0px black;
+    min-height: 30px;
+    box-shadow: 0px 3px 3px -2px #66c79c
 }
 .form-c-w-1 {
     width: 100%;
@@ -85,16 +105,19 @@
 }
 
 .in-c:checked + label {
-    background-color: #22543D;
+    background-color: #3d906a;
     color: white;
 }
 
+/* 연령 나이 카테고리 */
 .chk-d {
     display: flex;
     gap: 5px;
     justify-content: center;
     align-items: center;
+    font-family: 'KCC-Ganpan', sans-serif;
 }
+/* 체크박스 */
 .ckb {
     width: 20px;
     height: 20px;
@@ -105,34 +128,200 @@
     /* width: 5px; */
 }
 
+.img-txt {
+    width: 100%;
+}
+.img-div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.img-div div {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
 
+.formImg {
+    width: 30px;
+    height: 30px;
+    background: url('../img/swot_img/MicrosoftTeams-image.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* text-wrap: nowrap; */
+}
+
+.in-r:checked + label > div > .formImg{
+    filter: blur(2px);
+}
 
 .in-r + label {
     background-color: #F7FAFC;
     font-weight: bold;
-    width: 23%;
+    width: 18%;
     height: 50px;
     border-radius: 10px;
     box-shadow: 0px 1px 3px -1px black;
     display: flex;
     justify-content: center;
+    /* justify-content: space-between; */
     align-items: center;
+    flex-direction: column;
+    
     transition: transform 0.5s, font-size 0.5s;
 }
 
 .in-r:checked + label {
-    background-color: #22543D;
+    background-color: #66c79c;
     box-shadow: 0px 1px 5px -1px black;
-    font-size: 17px;
+    font-size: 16px;
     color: white;
     transform: scale(1.05);
 }
+/* 많은돈 */
+.slider_manymoney {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #66c79c;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
 
-.form_range {
-    width: 90%;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%,0);
+.slider_manymoney:hover {
+    opacity: 1;
+}
+
+.slider_manymoney::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/manymoney.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+  
+.slider_manymoney::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/manymoney.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+/* 돈 */
+.slider_money {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #66c79c;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider_money:hover {
+    opacity: 1;
+}
+
+.slider_money::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/money.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+  
+.slider_money::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/money.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+/* 성별 */
+.slider_sex {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #66c79c;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider_sex:hover {
+    opacity: 1;
+}
+
+.slider_sex::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/sex.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+  
+.slider_sex::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/sex.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+/* 인구 */
+.slider_home {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #66c79c;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider_home:hover {
+    opacity: 1;
+}
+
+.slider_home::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/home.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
+}
+  
+.slider_home::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    /* background: url('../img/swot_img/home.png') center center; */
+    background-size: contain; /* 이미지를 화면에 맞게 조절 */
+    cursor: pointer;
 }
 
 .t-center {
@@ -142,9 +331,12 @@
     transform: translate(-50%,-50%);
 }
 
+/* 추천 버튼 */
 .form-btn {
+    margin-top: 20px;
+    font-family: 'KCC-Ganpan', sans-serif;
     &:active {
-        box-shadow: 0px 1px 3px -1px black inset;
+        box-shadow: 0px 3px 3px -2px #66c79c inset;
         line-height:1px;
     }
     &:active > div {
@@ -157,7 +349,7 @@
     /* border: 1px solid black; */
     border-radius: 15px;
     background-color: #F7FAFC;
-    box-shadow: 0px 1px 3px -1px black;
+    box-shadow: 0px 3px 3px -2px #66c79c;
 }
 
 .dis-flex {
@@ -168,18 +360,3 @@
     justify-content: center;
     align-items: center;
 }
-
-.pd-b {
-    /* border-radius: 10px; */
-    padding-bottom: 10px;
-    /* border-bottom: 1px solid #CBD5E0; */
-    box-shadow: 0px 2px 2px -2px #718096;
-}
-
-.pm {
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top:10px;
-    margin-bottom:10px;
-}
-
