--- a/frontend/src/visualization_of_data/css/Button.css
+++ b/frontend/src/visualization_of_data/css/Button.css
@@ -1,32 +1,23 @@
+.container {
+    font-family: 'Arial', sans-serif;
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 20px;
+    margin: auto;
+    width: 100%;
+    height: 80%;
+}
+
 .popup-container {
-    background-color: #fff;
+    background-color: #f9a5a5;
     border: 1px solid #ccc;
     padding: 20px;
-    width: 300px; /* 필요에 따라 조절하세요 */
+    width: 500px;
 }
 
 .popup-header {
     border-bottom: 1px solid #eee;
     padding-bottom: 10px;
     margin-bottom: 10px;
+    font-size: 16px;
 }
-
-.header-stats {
-    display: flex;
-    justify-content: space-between;
-}
-
-.stat {
-    text-align: center;
-}
-
-.stat-title {
-    font-size: 0.8em;
-    color: #666;
-}
-
-.stat-value {
-    font-weight: bold;
-    color: #333;
-}
-
