--- a/frontend/src/css/MyForm.css
+++ b/frontend/src/css/MyForm.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'KCC-Ganpan';
-    /* src: url('../img/swot_img/KCC-Ganpan.woff') format('woff'); */
+    src: url('../img/Form/KCC-Ganpan.woff') format('woff');
 }
 .form-h {
     font-family: 'KCC-Ganpan', sans-serif;
@@ -31,10 +31,10 @@
 /* 업종 카테고리 관련 */
 .form-r-w {
     font-family: 'KCC-Ganpan', sans-serif;
+    font-size: 16px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* justify-content: ; */
     gap: 5px;
     width: 90%;
     margin: auto;
@@ -44,7 +44,7 @@
     content: "";
     text-align: center;
 }
-
+/* 연령 버튼 */
 .form-c-w {
     display: flex;
     flex-wrap: wrap;
@@ -52,6 +52,7 @@
     gap: 5px;
     width: 95%;
     margin: auto;
+    text-align: center;
 }
 /* 지역 카테고리 관련 */
 .form-div {
@@ -105,7 +106,7 @@
 }
 
 .in-c:checked + label {
-    background-color: #3d906a;
+    background-color: #66c79c;
     color: white;
 }
 
@@ -117,10 +118,159 @@
     align-items: center;
     font-family: 'KCC-Ganpan', sans-serif;
 }
+
+.cb2 {
+    height: 20px;
+    width: 20px;
+    background-color: transparent;
+    border: 2px solid #000;
+    border-radius: 5px;
+    box-sizing: border-box;
+    position: relative;
+    display: inline-block;
+    transition: border-color ease 0.2s;
+    cursor: pointer;
+}
+  
+.cb2::before, .cb2::after {
+    position: absolute;
+    height: 0;
+    width: 4px;
+    background-color: #66c79c;
+    box-sizing: border-box;
+    display: inline-block;
+    transform-origin: left top;
+    border-radius: 5px;
+    content: ' ';
+    transition: opacity ease 0.5;
+}
+
+.cb2::before {
+top: 14.4px;
+left: 8.2px;
+box-shadow: 0 0 0 1px transparent;
+transform: rotate(-135deg);
+}
+.cb2::after {
+top: 7.4px;
+left: 1px;
+transform: rotate(-45deg);
+}
+  
+input[id="f-c-i-1"]:checked + .cb2 {
+border-color: #66c79c;
+}
+
+input[id="f-c-i-2"]:checked + .cb2 {
+    border-color: #66c79c;
+}
+
+input[id="f-c-i-3"]:checked + .cb2 {
+    border-color: #66c79c;
+}
+
+input[id="f-c-i-4"]:checked + .cb2 {
+    border-color: #66c79c;
+}
+
+input[id="f-c-i-5"]:checked + .cb2 {
+    border-color: #66c79c;
+}
+
+input[id="f-c-i-1"]:checked + .cb2::after {
+  height: 10px;
+  animation: bottomcheck 0.2s ease 0s forwards;
+}
+input[id="f-c-i-1"]:checked + .cb2::before {
+  height: 24px;
+  animation: topcheck 0.4s ease 0s forwards;
+}
+
+input[id="f-c-i-2"]:checked + .cb2::after {
+    height: 10px;
+    animation: bottomcheck 0.2s ease 0s forwards;
+}
+input[id="f-c-i-2"]:checked + .cb2::before {
+    height: 24px;
+    animation: topcheck 0.4s ease 0s forwards;
+}
+
+input[id="f-c-i-3"]:checked + .cb2::after {
+    height: 10px;
+    animation: bottomcheck 0.2s ease 0s forwards;
+}
+input[id="f-c-i-3"]:checked + .cb2::before {
+    height: 24px;
+    animation: topcheck 0.4s ease 0s forwards;
+}
+
+input[id="f-c-i-4"]:checked + .cb2::after {
+    height: 10px;
+    animation: bottomcheck 0.2s ease 0s forwards;
+}
+input[id="f-c-i-4"]:checked + .cb2::before {
+    height: 24px;
+    animation: topcheck 0.4s ease 0s forwards;
+}
+
+input[id="f-c-i-5"]:checked + .cb2::after {
+    height: 10px;
+    animation: bottomcheck 0.2s ease 0s forwards;
+}
+input[id="f-c-i-5"]:checked + .cb2::before {
+    height: 24px;
+    animation: topcheck 0.4s ease 0s forwards;
+}
+
+input[id="f-c-i-1"] {
+	display: none;
+}
+input[id="f-c-i-2"] {
+	display: none;
+}
+input[id="f-c-i-3"] {
+	display: none;
+}
+input[id="f-c-i-4"] {
+	display: none;
+}
+input[id="f-c-i-5"] {
+	display: none;
+}
+@keyframes bottomcheck {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 10px;
+  }
+}
+@keyframes topcheck {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 0;
+  }
+  100% {
+    height: 24px;
+  }
+}
+
 /* 체크박스 */
-.ckb {
+.ckb { 
     width: 20px;
     height: 20px;
+    /* display: block; 
+    position: relative; 
+    padding-left: 25px; 
+    margin-bottom: 10px; 
+    cursor: pointer; 
+    font-size: 14px; 
+    -webkit-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none;  */
 }
 
 .dis-hi {
@@ -130,11 +280,16 @@
 
 .img-txt {
     width: 100%;
+    margin-top: -27px;
+}
+.img-txt5 {
+    font-size: 12px;
 }
 .img-div {
     position: relative;
     width: 100%;
     height: 100%;
+    margin-top: 20px;
 }
 .img-div div {
     position: absolute;
@@ -142,41 +297,99 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
-
+/* 카테고리 이미지 */
 .formImg {
     width: 30px;
     height: 30px;
-    background: url('../img/swot_img/MicrosoftTeams-image.png') center center;
+    background: url('../img/Form/manymoney.png') center center;
     background-size: contain;
     background-repeat: no-repeat;
     /* text-wrap: nowrap; */
 }
-
-.in-r:checked + label > div > .formImg{
-    filter: blur(2px);
+/* 한식 */
+.formImg0 {
+    background: url('../img/Form/bibimbab.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
+/* 일식 */
+.formImg1 {
+    background: url('../img/Form/sushi.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 중식 */
+.formImg2 {
+    background: url('../img/Form/jjajang.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 양식 */
+.formImg3 {
+    background: url('../img/Form/donkka.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 분식 */
+.formImg4 {
+    background: url('../img/Form/tteokbokki.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 패스트푸드 */
+.formImg5 {
+    background: url('../img/Form/hamburger.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 치킨 */
+.formImg6 {
+    background: url('../img/Form/chicken.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 주점 */
+.formImg7 {
+    background: url('../img/Form/soju.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 카페 */
+.formImg8 {
+    background: url('../img/Form/coffee.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* 제과점 */
+.formImg9 {
+    background: url('../img/Form/bread.png') center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+/* .in-r:checked + label > div > .formImg{
+    filter: blur(2px);
+} */
 
 .in-r + label {
     background-color: #F7FAFC;
-    font-weight: bold;
     width: 18%;
-    height: 50px;
+    height: 60px;
     border-radius: 10px;
     box-shadow: 0px 1px 3px -1px black;
     display: flex;
     justify-content: center;
-    /* justify-content: space-between; */
     align-items: center;
     flex-direction: column;
-    
     transition: transform 0.5s, font-size 0.5s;
 }
 
 .in-r:checked + label {
+    font-weight: bold;
     background-color: #66c79c;
     box-shadow: 0px 1px 5px -1px black;
     font-size: 16px;
-    color: white;
+    color: black;
     transform: scale(1.05);
 }
 /* 많은돈 */
@@ -202,7 +415,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/manymoney.png') center center; */
+    background: url('../img/Form/manymoney.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -211,7 +424,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/manymoney.png') center center; */
+    background: url('../img/Form/manymoney.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -238,7 +451,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/money.png') center center; */
+    background: url('../img/Form/money.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -247,7 +460,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/money.png') center center; */
+    background: url('../img/Form/money.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -274,7 +487,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/sex.png') center center; */
+    background: url('../img/Form/sex.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -283,7 +496,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/sex.png') center center; */
+    background: url('../img/Form/sex.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -310,7 +523,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/home.png') center center; */
+    background: url('../img/Form/home.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
@@ -319,7 +532,7 @@
     width: 40px;
     height: 40px;
     border: 0;
-    /* background: url('../img/swot_img/home.png') center center; */
+    background: url('../img/Form/home.png') center center;
     background-size: contain; /* 이미지를 화면에 맞게 조절 */
     cursor: pointer;
 }
