--- a/frontend/src/visualization_of_data/css/Button.css
+++ b/frontend/src/visualization_of_data/css/Button.css
@@ -1,11 +1,14 @@
+
+
 .container {
-    font-family: 'Arial', sans-serif;
+    /* font-family: 'Arial', sans-serif; */
     background-color: #ffffff;
     border: 1px solid #ffffff;
-    padding: 20px;
+    padding: 10px;
     margin: auto;
     width: 100%;
     height: 80%;
+    margin-top: -10px;
 }
 
 .popup-container {
