--- a/frontend/src/css/InterfaceWin.css
+++ b/frontend/src/css/InterfaceWin.css
@@ -9,7 +9,7 @@
     position: absolute;
     right: 0;
     top: 50px;
-    height: 1080px;
+    height: 88%;
     width: 550px;
     background-color: white;
     box-shadow: 0 0 15px -5px #4A5568;
